[shell-release]next version 3.1.7-SNAPSHOT